@@ -2,5 +2,5 @@
 <item>
     <version>0.9.1</version>
     <url>https://github.com/FetzenRndy/AstroSoundboard/raw/hotfix/Fix_Squirrel_Updating/public/versions/v0.9.0/version.zip</url>
-    <changelog>https://github.com/FetzenRndy/AstroSoundboard/blob/hotfix/Fix_Squirrel_Updating/public/versions/changelog.txt</changelog>
+    <changelog>https://www.dropbox.com/home/AstroKittySoundBoard?preview=changelog.txt</changelog>
 </item>
