@@ -125,7 +125,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Core\Components\AppUpdater.cs" />
     <Compile Include="Core\Components\SettingsManager.cs" />
     <Compile Include="Core\Components\SoundManager.cs" />
     <Compile Include="Core\Components\ViewChanger.cs" />
